--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.CSS">
 <script type="text/javascript">
-	$(window).on('scroll',function()
+	$(window).on('scroll',function())
 	{
 		if($(window).scrollTop())
 		{
@@ -12,7 +12,7 @@
 		}
 		else
 			$('nav').removeClass('black');
-	})
+	}
 </script>
 </head>
 <body color="#black">
@@ -40,17 +40,7 @@
 
 <section class="sec1"></section>
 <section class="content">
-	<p>
-		Parallel computing has seen many changes since the days of the highly expensive and proprietary super computers. Changes and improvements in performance have also been seen in the area of mainframe computing for many environments. But these
-compute environments may not be the most cost effectiveand flexible solution for a problem. Over the past decade, cluster technologies have been developed that allow multiple low cost computers to work in a coordinated fashion to process applications.</p>
-<p>The economics, performance and flexibility of compute clusters makes cluster computing an attractive alternative to centralized computing models and the attendant to cost, inflexibility, and scalability issues inherent to these models.
-Many enterprises are now looking at clusters of high-performance, low cost
-computers to provide increased application performance, high availability, 
-scaling within the data center. Interest in and deployment of computer clusters has
-largely been driven by the increase in the performance of off-the-shelf commodity computers, high-speed, low-latency network switches and the maturity of the software</p>
-
-<p>components. Application performance continues to be of significant concern for various entities including governments, military, education, scientific an now enterprise organizations. This document provides a review of cluster computing, the various types of clusters and their associated applications. This document is a high level informational document; it does not provide details about various cluster implementations and applications.
-</p>
+	
 </section>
 </div>
 </body>
