--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 <ul>
 	<li><a class="active" href="hospital.html">HOME</a></li>
 
-<li><a href="doctor.php">DOCTOR</a></li>
+<li>
+<a href="doctor.php" onclick="window.open('doctor.php', '_self');"></a>
+	
+
+	</li>
 <li><a href="patient.php">PATIENT</a></li>
 
 <li><a href="EMP.php">EMPLOYEE</a></li>
