--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<li><a class="active" href="hospital.html">HOME</a></li>
 
 <li>
-<a href="doctor.php" onclick="window.open('doctor.php', '_self');"></a>
+<a href="doctor.php" onclick="window.open('doctor.php', '_self');">DOCTOR</a>
 	
 
 	</li>
