--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 	<li><a class="active" href="hospital.html">HOME</a></li>
 
 <li>
+	<script type="text/javascript">
 <a href="doctor.php" onclick="window.open('doctor.php', '_self');">DOCTOR</a>
-	
+	</script>
 
 	</li>
 <li><a href="patient.php">PATIENT</a></li>
