--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
 <ul>
 	<li><a class="active" href="hospital.html">HOME</a></li>
 
-<li>
+<li><a href="https://github.com/mukteshbobade/hospital/blob/master/doctor.php
+">DOCTOR</li>
 	
-<a href="doctor.php" onclick="window.open('doctor.php', '_self');">DOCTOR</a>
-	
-
-	</li>
 <li><a href="patient.php">PATIENT</a></li>
 
 <li><a href="EMP.php">EMPLOYEE</a></li>
