--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	
 <div class="logo">HOSPITAL</div> 
 <ul>
-	<li><a class="active" href="hospital.html">HOME</a></li>
+	<li><a class="active" href="https://mukteshbobade.github.io/hospital/index.html">HOME</a></li>
+
 
 <li><a href="https://github.com/mukteshbobade/hospital/blob/master/doctor.php
 ">DOCTOR</li>
