--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <li><a href="https://github.com/mukteshbobade/hospital/blob/master/doctor.php
 ">DOCTOR</li>
 	
-<li><a href="patient.php">PATIENT</a></li>
+<li><a href="https://mukteshbobade.github.io/hospital/patient.php">PATIENT</a></li>
 
 <li><a href="EMP.php">EMPLOYEE</a></li>
 <li><a href="test.php">TEST</a></li>
