--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 <ul>
 	<li><a class="active" href="https://mukteshbobade.github.io/hospital/index.html">HOME</a></li>
 
+<li><a href="doctor.html">DOCTOR</a></li>
 
-<li><a href="https://github.com/mukteshbobade/hospital/blob/master/doctor.php
-">DOCTOR</li>
-	
-<li><a href="https://mukteshbobade.github.io/hospital/patient.php">PATIENT</a></li>
+<li><a href="EMP.php">EMPLOYEE</a></li>
 
 <li><a href="EMP.php">EMPLOYEE</a></li>
 <li><a href="test.php">TEST</a></li>
