--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 	
 <div class="logo">HOSPITAL</div> 
 <ul>
-	<li><a class="active" href="https://mukteshbobade.github.io/hospital/index.html">HOME</a></li>
+	<li><a class="active" href="index.html">HOME</a></li>
 
 <li><a href="doctor.html">DOCTOR</a></li>
 
-<li><a href="EMP.php">EMPLOYEE</a></li>
+<li><a href="patient.html">PATIENT</a></li>
 
-<li><a href="EMP.php">EMPLOYEE</a></li>
-<li><a href="test.php">TEST</a></li>
-<li><a href="bill.php">BILL</a></li>
+<li><a href="EMP.html">EMPLOYEE</a></li>
+<li><a href="test.html">TEST</a></li>
+<li><a href="bill.html">BILL</a></li>
 
 
 
