--- a/patient.html
+++ b/patient.html
@@ -8,7 +8,7 @@
 <header>
 
 
-  <a class="active" href="hospital.html">HOME</a>
+  <a class="active" href="index.html">HOME</a>
 
 </header>
 
@@ -192,155 +192,3 @@
 
 
 </html>
-<?php
-
-$con=new mysqli('localhost','root','','hospitaldb');
-/*$patient_id1=;
-$patient_name1=;
-$patient_gender1=;
-$patient_address1=;
-$patient_weight1=;
-$patient_bg1=;
-$patient_dob1=;
-$patient_email1=;
-$patient_contact1=;
-$patient_desease1=;
-*/
-
-if(isset($_POST["sub1"]))
-{
-$sql="INSERT INTO patient (patient_id,patient_name,patient_gender,patient_address,patient_weight,patient_bg,patient_dob,patient_email,patient_contact,patient_desease,r_no,r_type) VALUES('$_POST[p_id]','$_POST[p_name]','$_POST[p_gender]','$_POST[p_address]','$_POST[p_weight]','$_POST[p_bg]','$_POST[p_dob]','$_POST[p_email]','$_POST[p_contact]','$_POST[p_desease]','$_POST[r_no]','$_POST[r_type]')";
-mysqli_query($con,$sql);
-
-
-}
-
-
-if(isset($_POST["sub2"]))
-{
-
-mysqli_query($con,"delete from patient where patient_id='$_POST[p_id]'");
-echo "Data Deleted";
-}
-
-
-if(isset($_POST['sub3']))
-
-{
-
-  $res=mysqli_query($con,"select * from patient");
-echo "<center>";
-echo "<br>";
-  echo "<br>";
-  echo "<br>";
-  
-  echo "<table border=1 >";
-  
-  echo "<tr>";
-  echo "<th>";  echo "ID";   echo "</th>";
-  echo "<th>";  echo "NAME";   echo "</th>";
-    echo "<th>";  echo "GENDER";   echo "</th>";
-    echo "<th>";  echo "ADDRESS";   echo "</th>";
-    echo "<th>";  echo "WEIGHT";   echo "</th>";
-      echo "<th>";  echo "Blood Group";   echo "</th>";
-    echo "<th>";  echo "Date of Birth";   echo "</th>";
-    echo "<th>";  echo "EMAIL";   echo "</th>";
-    echo "<th>";  echo "CONTACT";   echo "</th>";
-    echo "<th>";  echo "DESEASES";   echo "</th>";
-    echo "<th>";  echo "Room No";   echo "</th>";
-    echo "<th>";  echo "Room Type";   echo "</th>";
-    
-while($show=mysqli_fetch_array($res))
-{
-echo "<tr>";
-    echo "<td>";  echo $show["patient_id"];   echo "</td>";
-     echo "<td>";  echo $show["patient_name"];   echo "</td>";
-    echo "<td>";  echo $show["patient_gender"];   echo "</td>";
-    echo "<td>";  echo $show["patient_address"];   echo "</td>";
-    echo "<td>";  echo $show["patient_weight"];   echo "</td>";
-    echo "<td>";  echo $show["patient_bg"];   echo "</td>";
-    echo "<td>";  echo $show["patient_dob"];   echo "</td>";
-    echo "<td>";  echo $show["patient_email"];   echo "</td>";
-    echo "<td>";  echo $show["patient_contact"];   echo "</td>";
-   echo "<td>";  echo $show["patient_desease"];   echo "</td>";
-   echo "<td>";  echo $show["r_no"];   echo "</td>";
-   echo "<td>";  echo $show["r_type"];   echo "</td>";
-   
-echo "</tr>";
-
-  }
-echo "</table>";
-echo "</center>";
-    } 
-
-
-
-
-if(isset($_POST['sub4']))
-{
-
-$res=mysqli_query($con,"select * from patient where patient_id='$_POST[p_id]'");
-echo "<center>";
-
-  echo "<table border=1>";
-  
-  echo "<tr>";
-  echo "<th>";  echo "ID";   echo "</th>";
-  echo "<th>";  echo "NAME";   echo "</th>";
-    echo "<th>";  echo "GENDER";   echo "</th>";
-    echo "<th>";  echo "ADDRESS";   echo "</th>";
-    echo "<th>";  echo "WEIGHT";   echo "</th>";
-      echo "<th>";  echo "Blood Group";   echo "</th>";
-    echo "<th>";  echo "Date of Birth";   echo "</th>";
-    echo "<th>";  echo "EMAIL";   echo "</th>";
-    echo "<th>";  echo "CONTACT";   echo "</th>";
-    echo "<th>";  echo "DESEASES";   echo "</th>";
-     echo "<th>";  echo "Room No";   echo "</th>";
-    echo "<th>";  echo "Room Type";   echo "</th>";
-    
-while($show=mysqli_fetch_array($res))
-{
-echo "<tr>";
-    echo "<td>";  echo $show["patient_id"];   echo "</td>";
-     echo "<td>";  echo $show["patient_name"];   echo "</td>";
-    echo "<td>";  echo $show["patient_gender"];   echo "</td>";
-    echo "<td>";  echo $show["patient_address"];   echo "</td>";
-    echo "<td>";  echo $show["patient_weight"];   echo "</td>";
-    echo "<td>";  echo $show["patient_bg"];   echo "</td>";
-    echo "<td>";  echo $show["patient_dob"];   echo "</td>";
-    echo "<td>";  echo $show["patient_email"];   echo "</td>";
-    echo "<td>";  echo $show["patient_contact"];   echo "</td>";
-   echo "<td>";  echo $show["patient_desease"];   echo "</td>";
-   echo "<td>";  echo $show["r_no"];   echo "</td>";
-   echo "<td>";  echo $show["r_type"];   echo "</td>";
-   
-echo "</tr>";
-
-  }
-echo "</table>";
-echo "</center>";
-    } 
-
-if(isset($_POST["sub5"]))
-{
-
-$sql="update patient set patient_name='$_POST[p_name]',patient_address='$_POST[p_address]',patient_weight='$_POST[p_weight]',patient_bg='$_POST[p_bg]',patient_dob='$_POST[p_dob]',patient_email='$_POST[p_email]',patient_contact='$_POST[p_contact]',patient_desease='$_POST[p_desease]' where patient_id='$_POST[p_id]'";
-if(mysqli_query($con,$sql))
-{
-header("refresh:100; url=patient.php");
-
-}
-else
-echo "NOT UPDATE";
-
-}
-/*header("refresh:2; url=patient.html");
-*/
-
-
-
-
-
-
-
-?>
