--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <header>
 
 
-	<a href="hospital.html">HOME</a>
+	<a href="index.html">HOME</a>
 
 </header>
 
@@ -116,65 +116,3 @@
 </table>
 </body>
 </html>
-<?php  
-
-
-session_start();
- 
-include('con1.php');
- 
-
-if(isset($_POST["sub1"]))
-{
-
-mysqli_query($con,"insert into test (pa_name,pa_contact,t_date,t_type,t_doctor)values('$_POST[pa_name]','$_POST[pa_contact]','$_POST[t_date]','$_POST[t_type]','$_POST[t_doctor]')");
-
-}
-
-else if(isset($_POST["sub2"]))
-{
-	
-	$query1=mysqli_query($con,"delete from test where pa_name='$_POST[pa_name]'");
-	if($query1)
-echo "Data Deleted";
-}
-
-else if(isset($_POST["sub3"]))
-{
-
-	$result=mysqli_query($con,"select * from  test");
-	echo "<center>";
-	echo "<br>";
-	echo "<br>";
-	echo "<br>";
-	
-	echo "<table border=1>";
-	
-	echo "<tr>";
-		echo "<th>";  echo "NAME";   echo "</th>";
-		echo "<th>";  echo "CONTACT";   echo "</th>";
-		echo "<th>";  echo "DATE";   echo "</th>";
-		echo "<th>";  echo "TYPE";   echo "</th>";
-	echo "<th>";  echo "Suggested doctor";   echo "</th>";
-				
-
-
-		echo "</tr>";
-	while($group=mysqli_fetch_array($result))
-	{
-		echo "<tr>";
-		echo "<td>";  echo $group["pa_name"];   echo "</td>";
-		echo "<td>";  echo $group["pa_contact"];   echo "</td>";
-		echo "<td>";  echo $group["t_date"];   echo "</td>";
-	echo "<td>";  echo $group["t_type"];   echo "</td>";
-	echo "<td>";  echo $group["t_doctor"];   echo "</td>";
-	
-		echo "</tr>";
-	}
-echo "</table>";
-echo "</center>";
-		}	
-
-
-
-?>
