--- a/index.html
+++ b/index.html
@@ -20,17 +20,34 @@
 
 <nav>
 	
-<div class="logo">HOSPITAL</div> 
+<div class="logo"> WE CARES HOSPITAL</div> 
 <ul>
 	<li><a class="active" href="index.html">HOME</a></li>
 
-<li><a href="doctor.html">DOCTOR</a></li>
+<li><a href="doctor.html">DOCTOR
+</a>
+</svg>
+</li>
 
-<li><a href="patient.html">PATIENT</a></li>
+<li><a href="#APPOINTMENT">
+APPOINTMENT
+<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+  <path fill-rule="evenodd" d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
+  <path fill-rule="evenodd" d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"/>
+</a>
+</li>
 
-<li><a href="EMP.html">EMPLOYEE</a></li>
-<li><a href="test.html">TEST</a></li>
-<li><a href="bill.html">BILL</a></li>
+<li><a href="EMP.html">GALLERY
+<svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+  <path d="M10.648 7.646a.5.5 0 0 1 .577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71z"/>
+  <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+</svg>
+</a>
+</li>
+
+<li><a href="test.html">CONTACT US</a></li>
 
 
 
@@ -43,6 +60,119 @@
 <section class="content">
 	
 </section>
+</div>
+
+<div name="APPOINTMENT">
+	<table   border="auto" align="center"  style="background-color:white";>
+
+
+  <form height="40">
+ <tr>
+ <td>
+<th>
+<h1>  <br>Make an Appointment</h1>
+</th>
+</td>
+</tr>
+
+
+<tr>
+  <td>
+<label for="p_name"> Patient Name:</label>
+
+</td>
+<td>
+<input type="text" name="p_name"maxlength="50" size="30" required></br>
+</td>
+</tr>
+
+
+<tr>
+<td>
+<label for="p_gender"> Gender</label>
+</td>
+<td>
+<input type="radio" name="p_gender" value="male">Male
+<input type="radio" name="p_gender" value="Female">FeMale
+</td>
+</tr>
+
+
+<tr>
+  <td>
+    <label for="p_address"> Patient Address:</label>
+</td>
+<td>
+
+<input type="text"  name="p_address"maxlength="50" size="30" required></br>
+</td>
+</tr>
+
+
+<tr>
+  <td>
+<label for="p_weight">Patient weight:</label>
+  </td>
+  <td>
+
+  <input type="text" name="p_weight"maxlength="50" appearance: none; size="30" required ></br>
+</td>
+</tr>
+
+<tr>
+<td>
+  <label for="p_bg">Patient BloodGroup</label>
+
+  </td>
+<td>
+ :<input type="text" name="p_bg"maxlength="50" size="30" required>
+</td>  
+</tr>
+
+<tr>
+  <td>
+    <label for="p_dob">Patient Date of Birth:</label>
+ </td>
+ <td>
+  <input type="text" name="p_dob"maxlength="50" size="30" required>
+</td>
+</tr>
+
+
+
+<tr>
+  <td>
+    <label for="p_contact">Patient Contact no.</label>
+  </td>
+  <td>
+  <input type="text" name="p_contact"maxlength="50" size="30"required>
+</td>  
+</tr>
+
+<tr>
+  <td>
+<label for="p_desease">Patient Deseases:</label>
+  </td>
+  <td>
+  <input type="text" name="p_desease"maxlength="50" size="30" required>
+  </td>
+</tr>
+  
+
+
+
+  <tr>
+  <td colspan="2" style="text-align: center;">
+<div>
+  <br><input type="submit" name="sub1" value="SUBMIT">
+	
+  
+</td>   
+</tr>
+</div>
+</form>
+</table>
+
 </div>
 </body>
 </html>
