--- a/patient.html
+++ b/patient.html
@@ -42,18 +42,8 @@
  <tr>
  <td>
 <th>
-<h1>  <br>Patient Details </h1>
+<h1>  <br>Make an Appointment</h1>
 </th>
-</td>
-</tr>
-
-<tr>
-  <td>
-    <label for="p_id">Patient id:</label>
-</td>
-
- <td>
-  <input type="text" name="p_id"maxlength="50" size="30" required> </br>
 </td>
 </tr>
 
@@ -121,14 +111,6 @@
 </tr>
 
 
-<tr>
-  <td>
-    <label for="p_email">Patient Email:</label>
-  </td>
-  <td>
-  <input type="email" name="p_email"maxlength="50" size="30"required>
-</td>
-</tr>
 
 <tr>
   <td>
@@ -148,35 +130,14 @@
   </td>
 </tr>
   
-<tr>
-  <td>
-<label for="r_no">Patient Room No</label>
-  </td>
-  <td>
-  <input type="text" name="r_no"maxlength="50" size="30"required>
-  </td>
-</tr>
-
-<tr>
-  <td>
-<label for="r_type">Patient Room Type</label>
-  </td>
-  <td>
-  <input type="text" name="r_type"maxlength="50" size="30"required>
-  </td>
-</tr>
 
 
 
   <tr>
   <td colspan="2" style="text-align: center;">
 <div>
-  <br><input type="submit" name="sub1" value="INSERT">
-	<input type="submit" name="sub2" value="DELETE">
-  	
-  	<input type="submit" name="sub3" value="DISPLAY">
-	<input type="submit" name="sub4" value="SEARCH">
-  <input type="submit" name="sub5" value="UPDATE">
+  <br><input type="submit" name="sub1" value="SUBMIT">
+	
   
 </td>   
 </tr>
