--- a/index.html
+++ b/index.html
@@ -2,22 +2,10 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.CSS">
-<script type="text/javascript">
-	$(window).on('scroll',function())
-	{
-		if($(window).scrollTop())
-		{
-			$('nav').addClass('black');
 
-		}
-		else
-			$('nav').removeClass('black');
-	}
-</script>
 </head>
 <body color="#black">
-<div class="wrapper">
-
+<section class="first">
 <nav>
 	
 <div class="logo"> WE CARES HOSPITAL</div> 
@@ -29,7 +17,7 @@
 </svg>
 </li>
 
-<li><a href="#APPOINTMENT">
+<li><a href="#second">
 APPOINTMENT
 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
@@ -55,126 +43,41 @@ APPOINTMENT
 
 
 </nav>
-
-<section class="sec1"></section>
-<section class="content">
-	
 </section>
 </div>
+<br>
+<section class="second">
 
-<div name="APPOINTMENT">
-	<table   border="auto" align="center"  style="background-color:white";>
-
-
-  <form height="40">
- <tr>
- <td>
-<th>
-<h1>  <br>Make an Appointment</h1>
-</th>
-</td>
-</tr>
-
-
-<tr>
-  <td>
-<label for="p_name"> Patient Name:</label>
-
-</td>
-<td>
-<input type="text" name="p_name"maxlength="50" size="30" required></br>
-</td>
-</tr>
-
-
-<tr>
-<td>
-<label for="p_gender"> Gender</label>
-</td>
-<td>
-<input type="radio" name="p_gender" value="male">Male
-<input type="radio" name="p_gender" value="Female">FeMale
-</td>
-</tr>
-
-
-<tr>
-  <td>
-    <label for="p_address"> Patient Address:</label>
-</td>
-<td>
-
-<input type="text"  name="p_address"maxlength="50" size="30" required></br>
-</td>
-</tr>
-
-
-<tr>
-  <td>
-<label for="p_weight">Patient weight:</label>
-  </td>
-  <td>
-
-  <input type="text" name="p_weight"maxlength="50" appearance: none; size="30" required ></br>
-</td>
-</tr>
-
-<tr>
-<td>
-  <label for="p_bg">Patient BloodGroup</label>
-
-  </td>
-<td>
- :<input type="text" name="p_bg"maxlength="50" size="30" required>
-</td>  
-</tr>
-
-<tr>
-  <td>
-    <label for="p_dob">Patient Date of Birth:</label>
- </td>
- <td>
-  <input type="text" name="p_dob"maxlength="50" size="30" required>
-</td>
-</tr>
-
-
-
-<tr>
-  <td>
-    <label for="p_contact">Patient Contact no.</label>
-  </td>
-  <td>
-  <input type="text" name="p_contact"maxlength="50" size="30"required>
-</td>  
-</tr>
-
-<tr>
-  <td>
-<label for="p_desease">Patient Deseases:</label>
-  </td>
-  <td>
-  <input type="text" name="p_desease"maxlength="50" size="30" required>
-  </td>
-</tr>
-  
-
-
-
-  <tr>
-  <td colspan="2" style="text-align: center;">
-<div>
-  <br><input type="submit" name="sub1" value="SUBMIT">
+	<div class="Patient_appoint"><center><h1>APPOINTMENT</h1></center>
 	
-  
-</td>   
-</tr>
-</div>
-</form>
-</table>
 
+ <h2><label for="p_name">Name:</label></h2>
+<input type="text" name="p_name"maxlength="50" size="30" required>
+
+
+ <h2><br><label for="p_address">Address:</label></h2>
+<input type="text"  name="p_address"maxlength="50" size="30" required>
+
+
+    <h2><label for="p_dob">Date of Birth:</label></h2>
+  <input type="Date" name="p_dob"maxlength="50" size="30" required>
+
+
+    <h2><br><label for="p_contact">Contact no.</label></h2>
+  <input type="text" name="p_contact"maxlength="50" size="30"required>
+
+
+
+
+  <br><input type="submit" name="sub1" value="SUBMIT">
 </div>
+</section>
+
+
+
+
 </body>
+
 </html>
 
 
