--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="style.CSS">
+<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-social/bootstrap-social.css">
+   <link rel="stylesheet" href="font-awesome-master/css/font-awesome.min.css">
+
 
 </head>
 <body color="#black">
@@ -10,7 +14,7 @@
 	
 <div class="logo"> WE CARES HOSPITAL</div> 
 <ul>
-	<li><a class="active" href="index.html">HOME</a></li>
+	<li><a class="active" href="index.html"><span class="fa fa-home"></span> HOME</a></li>
 
 <li><a href="doctor.html">DOCTOR
 </a>
@@ -19,19 +23,10 @@
 
 <li><a href="#second">
 APPOINTMENT
-<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-  <path fill-rule="evenodd" d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
-  <path fill-rule="evenodd" d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"/>
 </a>
 </li>
 
 <li><a href="EMP.html">GALLERY
-<svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-  <path d="M10.648 7.646a.5.5 0 0 1 .577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71z"/>
-  <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-</svg>
 </a>
 </li>
 
@@ -47,9 +42,9 @@ APPOINTMENT
 </div>
 
 <div name="first">
-  <img class="images" src="image1.jpg">
-  <img class="images" src="image2.jpg">
-  <img class="images" src="image3.jpg">
+  <img class="images" src="Images/image1.jpg">
+  <img class="images" src="Images/image2.jpg">
+  <img class="images" src="Images/image3.jpg">
   
 <button class="buttons" onclick="changeBack1()" id="b1"><</button>
 <button class="buttons" onclick="changeBack1()" id="b2">></button>
