--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             </div>
   </div>            
- <script type="text/javascript" src="myjs.js"></script>
+ <script type="text/javascript" src="js/myjs.js"></script>
 </footer>
 </html>
 
