--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 </div>
             </div>
 
+
+            <div class="col-sm align-self-center">
+               <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><span class="fa fa-twitter fa-lg"></span></a>
+                        
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><span class="fa fa-youtube fa-lg"></span></a>
+                        
+            </div>
             <div class="justify-content-center">
               <div class="offset-5">
               <p> © Copyright 2018 Muktesh T.Bobade</p>
