--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 
 <br>
+<h3 class="col-12 offset-4">Feedback Form</h3>
 <div class="col-12 col-md-9">
   <form>
     <div class="form-group row">
